fix: add missing config declaration

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -514,7 +514,7 @@ rateBossHealth = 1.0
 rateBossAttack = 1.0
 rateBossDefense = 1.0
 
-bossDefaultTimeToDefeat = 20 * 60 * 60 -- 20 hours
+bossDefaultTimeToFightAgain = 20 * 60 * 60 -- 20 hours
 bossDefaultTimeToDefeat = 20 * 60 -- 20 minutes
 
 -- Monsters
